--- a/main.html
+++ b/main.html
@@ -11,6 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div class="holder">
+		<div>1</div>
+			<div>1</div>
+			<div>1</div>
+	</div>
+
 </body>
 
 </html>
